@@ -152,10 +152,14 @@ bin_PROGRAMS += bogoQDBMupgrade
 bogoQDBMupgrade_SOURCES = bogoQDBMupgrade.c datastore_qdbm_cmpkey.c
 bogoQDBMupgrade_LDADD = $(LDADD) $(LIBDB)
 else
+if ENABLE_SQLITE_DATASTORE
+datastore_SOURCE = datastore_sqlite.c
+else
 if ENABLE_OLD_BDB
 datastore_SOURCE = datastore_olddb.c datastore_dummies.c datastore_dbcommon.h
 else
 datastore_SOURCE = datastore_db.c datastore_dbcommon.h
+endif
 endif
 endif
 endif
