@@ -35,10 +35,11 @@ export _POSIX2_VERSION
 # Obtain data base file suffix
 DB_NAME=`$BOGOFILTER -C -V 2>&1 | sed -n '2p;'`
 case $DB_NAME in
-    *BerkeleyDB*)   DB_EXT=db ;;
-    *"Berkeley DB"*)   DB_EXT=db ;;
-    *QDBM*)	    DB_EXT=qdbm ;;
-    *TrivialDB*)    DB_EXT=tdb ;;
+    *BerkeleyDB*)    DB_EXT=db ;;
+    *"Berkeley DB"*) DB_EXT=db ;;
+    *QDBM*)	     DB_EXT=qdbm ;;
+    *SQLite*)	     DB_EXT=db ;;
+    *TrivialDB*)     DB_EXT=tdb ;;
     *)		    echo >&2 "Unknown data base type in bogofilter -V: $DB_NAME"
 		    exit 1 ;;
 esac
